updated dir struct, added no index meta tags

--- a/development/public/register/index.html
+++ b/development/public/register/index.html
@@ -15,7 +15,7 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="#075E54">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
     <link rel="icon" type="image/x-icon" href="/favicon.ico"/>
-    <title>Send Secret Message</title>
+    <title>Register</title>
     <link rel="stylesheet" href="/common/srules/common.css"/>
 </head>
 <body>
