--- a/development/public/index.html
+++ b/development/public/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <meta name="robots" content="noindex">
+    <meta name="googlebot" content="noindex">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="keywords" content="">
     <meta name="description" content="">
@@ -13,9 +15,10 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="#075E54">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
     <link rel="icon" type="image/x-icon" href="/favicon.ico"/>
-    <title>Send Secret Message</title>
+    <title>Home</title>
+    <link rel="stylesheet" href="/common/srules/common.css"/>
 </head>
 <body>
-    
+    <script src="/common/scripts/common.js"></script>
 </body>
 </html>
