index.html: added some nodes

--- a/development/public/index.html
+++ b/development/public/index.html
@@ -19,6 +19,22 @@
     <link rel="stylesheet" href="/common/srules/common.css"/>
 </head>
 <body>
+    <div class="vert-scroll" id="root" style="
+        align-items: center; ">
+        <header></header>
+        <div class="vert-layout" id="your-profile" style="
+            align-items: center; ">
+            
+        </div>
+        <div class="vert-layout" id="your-messages" style="
+            align-items: center; ">
+            <div class="vert-layout" id="msg-39499493" style="
+                align-items: center; ">
+                <p class="message"></p>
+            </div>
+        </div>
+        <footer></footer>
+    </div>
     <script src="/common/scripts/common.js"></script>
 </body>
 </html>
