added more UI elements

--- a/development/public/register/index.html
+++ b/development/public/register/index.html
@@ -9,10 +9,10 @@
     <meta name="description" content="">
     <link rel="manifest" href="/a2hs.webmanifest">
     <meta name="viewport" content="width=device-width, height=device-height, user-scalable=no">
-    <meta name="theme-color" content="#075E54">
-    <meta name="msapplication-navbutton-color" content="#075E54">
+    <meta name="theme-color" content="#be1558">
+    <meta name="msapplication-navbutton-color" content="#be1558">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="#075E54">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#be1558">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
     <link rel="icon" type="image/x-icon" href="/favicon.ico"/>
     <title>Register</title>
