--- a/development/public/index.html
+++ b/development/public/index.html
@@ -9,32 +9,150 @@
     <meta name="description" content="">
     <link rel="manifest" href="/a2hs.webmanifest">
     <meta name="viewport" content="width=device-width, height=device-height, user-scalable=no">
-    <meta name="theme-color" content="#075E54">
-    <meta name="msapplication-navbutton-color" content="#075E54">
+    <meta name="theme-color" content="#be1558">
+    <meta name="msapplication-navbutton-color" content="#be1558">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="#075E54">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#be1558">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
     <link rel="icon" type="image/x-icon" href="/favicon.ico"/>
     <title>Home</title>
-    <link rel="stylesheet" href="/common/srules/common.css"/>
+    <link rel="stylesheet" href="/common/styles/common.css"/>
 </head>
 <body>
     <div class="vert-scroll" id="root" style="
-        align-items: center; ">
-        <header></header>
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        align-items: center;
+        border-radius: 0; ">
+        <header>
+            <h2 style="
+                font-size: 1.5rem; ">
+                SendSecretMsg
+            </h2>
+        </header>
         <div class="vert-layout" id="your-profile" style="
-            align-items: center; ">
-            
-        </div>
-        <div class="vert-layout" id="your-messages" style="
-            align-items: center; ">
-            <div class="vert-layout" id="msg-39499493" style="
+            margin-top: calc(1.5rem + 42.5px);
+            height: 35vh;
+            justify-content: center;
+            align-items: center;
+            border-radius: 0;
+            color: var(--sec-fgcolor);
+            background-color: var(--sec-bgcolor);
+            box-shadow: 0.5px 0.5px 2px 0px var(--shadow-color); ">
+            <div class="vert-layout" style="
+                justify-content: center;
                 align-items: center; ">
-                <p class="message"></p>
+                <h1 style="
+                    margin: 10px;
+                    font-size: 2rem;">
+                    Hi Padey! 👋
+                </h1>
+                <p style="
+                    margin: 10px;
+                    text-align: center; ">
+                    Copy the following link and share it with your friends.
+                    Your friends can then send you a secret message.
+                </p>
+                <p style="
+                    margin: 10px;
+                    padding: 7px 10px;
+                    width: calc(90% - 20px);
+                    border-radius: 10px;
+                    color: var(--prim-fgcolor);
+                    background-color: var(--prim-bgcolor);
+                    white-space: nowrap;
+                    overflow-x: hidden; ">
+                    <a id="your-link" href="https://sendsecretmsg.web.app/msg?id=39399393">https://sendsecretmsg.web.app/msg?id=39399393</a>
+                </p>
+                <button id="btn-copy-link">Copy link</button>
             </div>
         </div>
-        <footer></footer>
+        <div class="vert-layout" id="your-messages" style="
+            margin-bottom: 2rem;
+            padding: 20px;
+            width: calc(100% - 40px);
+            align-items: center; ">
+            <p class="message" id="msg-0000" style="
+                align-items: center; ">
+                Hi!
+                This is another demo message!
+                Hope you are doing well.
+            </p>
+            <p class="message" id="msg-0001" style="
+                align-items: center; ">
+                Hi!
+                This is another demo message!
+                Hope you are doing well.
+            </p>
+            <p class="message" id="msg-0002" style="
+                align-items: center; ">
+                Hi!
+                This is another demo message!
+                Hope you are doing well.
+            </p>
+            <p class="message" id="msg-0000" style="
+                align-items: center; ">
+                Hi!
+                This is another demo message!
+                Hope you are doing well.
+            </p>
+            <p class="message" id="msg-0001" style="
+                align-items: center; ">
+                Hi!
+                This is another demo message!
+                Hope you are doing well.
+            </p>
+            <p class="message" id="msg-0002" style="
+                align-items: center; ">
+                Hi!
+                This is another demo message!
+                Hope you are doing well.
+            </p>
+            <p class="message" id="msg-0000" style="
+                align-items: center; ">
+                Hi!
+                This is another demo message!
+                Hope you are doing well.
+            </p>
+            <p class="message" id="msg-0001" style="
+                align-items: center; ">
+                Hi!
+                This is another demo message!
+                Hope you are doing well.
+            </p>
+            <p class="message" id="msg-0002" style="
+                align-items: center; ">
+                Hi!
+                This is another demo message!
+                Hope you are doing well.
+            </p>
+            <p class="message" id="msg-0000" style="
+                align-items: center; ">
+                Hi!
+                This is another demo message!
+                Hope you are doing well.
+            </p>
+            <p class="message" id="msg-0001" style="
+                align-items: center; ">
+                Hi!
+                This is another demo message!
+                Hope you are doing well.
+            </p>
+            <p class="message" id="msg-0002" style="
+                align-items: center; ">
+                Hi!
+                This is another demo message!
+                Hope you are doing well.
+            </p>
+        </div>
     </div>
+    <footer>
+        <p>
+            Send feedback to
+            <a href="mailto:cinexsoft@gmail.com">cinexsoft@gmail.com</a>
+        </p>
+    </footer>
     <script src="/common/scripts/common.js"></script>
 </body>
 </html>
