--- a/development/public/index.html
+++ b/development/public/index.html
@@ -72,7 +72,14 @@
             margin-bottom: 2rem;
             padding: 20px;
             width: calc(100% - 40px);
-            align-items: center; ">
+            align-items: center;
+            color: var(--light-fgcolor);
+            background-color: var(--light-bgcolor); ">
+            <h2 style="
+                margin-bottom: 10px;
+                font-size: 1.5rem; ">
+                Your Messages
+            </h2>
             <p class="message" id="msg-0000" style="
                 align-items: center; ">
                 Hi!
