--- a/development/public/index.html
+++ b/development/public/index.html
@@ -17,149 +17,199 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico"/>
     <title>Home</title>
     <link rel="stylesheet" href="/common/styles/common.css"/>
+    <style>
+        p.message {
+            margin: 10px auto;
+            padding: 10px;
+            width: calc(100% - 20px);align-items: center;
+            color: var(--prim-fgcolor);
+            background-color: var(--prim-bgcolor);
+            white-space: pre-wrap;
+            border-radius: 10px;
+            // box-shadow: 0.5px 0.5px 2px 0px var(--shadow-color);
+        }
+    </style>
 </head>
 <body>
-    <div class="vert-scroll" id="root" style="
+    <div class="vert-layout" id="root" style="
         margin: 0;
         padding: 0;
         width: 100%;
+        height: 100vh;
         align-items: center;
         border-radius: 0; ">
         <header>
-            <h2 style="
+            <h2 class="noselect" style="
                 font-size: 1.5rem; ">
                 SendSecretMsg
             </h2>
         </header>
         <div class="vert-layout" id="your-profile" style="
-            margin-top: calc(1.5rem + 42.5px);
+            margin-top: calc(1.5rem + 30px);
             height: 35vh;
             justify-content: center;
             align-items: center;
             border-radius: 0;
-            color: var(--sec-fgcolor);
-            background-color: var(--sec-bgcolor);
+            color: var(--tert-fgcolor);
+            background-color: var(--tert-bgcolor);
             box-shadow: 0.5px 0.5px 2px 0px var(--shadow-color); ">
             <div class="vert-layout" style="
                 justify-content: center;
                 align-items: center; ">
-                <h1 style="
+                <h1 class="noselect" id="h1-your-name" style="
                     margin: 10px;
                     font-size: 2rem;">
                     Hi Padey! 👋
                 </h1>
-                <p style="
+                <p class="noselect" style="
                     margin: 10px;
                     text-align: center; ">
                     Copy the following link and share it with your friends.
                     Your friends can then send you a secret message.
                 </p>
-                <p style="
+                <p class="noselect" style="
                     margin: 10px;
                     padding: 7px 10px;
-                    width: calc(90% - 20px);
                     border-radius: 10px;
                     color: var(--prim-fgcolor);
                     background-color: var(--prim-bgcolor);
                     white-space: nowrap;
                     overflow-x: hidden; ">
-                    <a id="your-link" href="https://sendsecretmsg.web.app/msg?id=39399393">https://sendsecretmsg.web.app/msg?id=39399393</a>
+                    <a id="your-link" href="https://sendsecretmsg.web.app/msg?id=39399393">https://sendsecretmsg.web.app/msg?id...</a>
                 </p>
-                <button id="btn-copy-link">Copy link</button>
+                <button class="noselect" id="btn-copy-link">Copy link</button>
             </div>
         </div>
-        <div class="vert-layout" id="your-messages" style="
-            margin-bottom: 2rem;
+        <div class="vert-layout" id="div-your-messages" style="
             padding: 20px;
             width: calc(100% - 40px);
             align-items: center;
+            border-radius: 0;
             color: var(--light-fgcolor);
             background-color: var(--light-bgcolor); ">
-            <h2 style="
+            <h2 class="noselect" style="
                 margin-bottom: 10px;
                 font-size: 1.5rem; ">
                 Your Messages
             </h2>
-            <p class="message" id="msg-0000" style="
-                align-items: center; ">
+            <p class="message" id="p-msg-0000">
                 Hi!
                 This is another demo message!
                 Hope you are doing well.
             </p>
-            <p class="message" id="msg-0001" style="
-                align-items: center; ">
+            <p class="message" id="p-msg-0000">
                 Hi!
                 This is another demo message!
                 Hope you are doing well.
             </p>
-            <p class="message" id="msg-0002" style="
-                align-items: center; ">
+            <p class="message" id="p-msg-0000">
                 Hi!
                 This is another demo message!
                 Hope you are doing well.
             </p>
-            <p class="message" id="msg-0000" style="
-                align-items: center; ">
+            <p class="message" id="p-msg-0000">
                 Hi!
                 This is another demo message!
                 Hope you are doing well.
             </p>
-            <p class="message" id="msg-0001" style="
-                align-items: center; ">
+            <p class="message" id="p-msg-0000">
                 Hi!
                 This is another demo message!
                 Hope you are doing well.
             </p>
-            <p class="message" id="msg-0002" style="
-                align-items: center; ">
+            <p class="message" id="p-msg-0000">
                 Hi!
                 This is another demo message!
                 Hope you are doing well.
             </p>
-            <p class="message" id="msg-0000" style="
-                align-items: center; ">
+            <p class="message" id="p-msg-0000">
                 Hi!
                 This is another demo message!
                 Hope you are doing well.
             </p>
-            <p class="message" id="msg-0001" style="
-                align-items: center; ">
+            <p class="message" id="p-msg-0000">
                 Hi!
                 This is another demo message!
                 Hope you are doing well.
             </p>
-            <p class="message" id="msg-0002" style="
-                align-items: center; ">
+            <p class="message" id="p-msg-0000">
                 Hi!
                 This is another demo message!
                 Hope you are doing well.
             </p>
-            <p class="message" id="msg-0000" style="
-                align-items: center; ">
+            <p class="message" id="p-msg-0000">
                 Hi!
                 This is another demo message!
                 Hope you are doing well.
             </p>
-            <p class="message" id="msg-0001" style="
-                align-items: center; ">
+            <p class="message" id="p-msg-0000">
                 Hi!
                 This is another demo message!
                 Hope you are doing well.
             </p>
-            <p class="message" id="msg-0002" style="
-                align-items: center; ">
+            <p class="message" id="p-msg-0000">
+                Hi!
+                This is another demo message!
+                Hope you are doing well.
+            </p>
+            <p class="message" id="p-msg-0000">
+                Hi!
+                This is another demo message!
+                Hope you are doing well.
+            </p>
+            <p class="message" id="p-msg-0000">
+                Hi!
+                This is another demo message!
+                Hope you are doing well.
+            </p>
+            <p class="message" id="p-msg-0000">
+                Hi!
+                This is another demo message!
+                Hope you are doing well.
+            </p>
+            <p class="message" id="p-msg-0000">
+                Hi!
+                This is another demo message!
+                Hope you are doing well.
+            </p>
+            <p class="message" id="p-msg-0000">
+                Hi!
+                This is another demo message!
+                Hope you are doing well.
+            </p>
+            <p class="message" id="p-msg-0000">
+                Hi!
+                This is another demo message!
+                Hope you are doing well.
+            </p>
+            <p class="message" id="p-msg-0000">
+                Hi!
+                This is another demo message!
+                Hope you are doing well.
+            </p>
+            <p class="message" id="p-msg-0000">
+                Hi!
+                This is another demo message!
+                Hope you are doing well.
+            </p>
+            <p class="message" id="p-msg-0000">
+                Hi!
+                This is another demo message!
+                Hope you are doing well.
+            </p>
+            <p class="message" id="p-msg-0000">
                 Hi!
                 This is another demo message!
                 Hope you are doing well.
             </p>
         </div>
+        <footer>
+            <p class="noselect">
+                Send feedback to
+                <a href="mailto:cinexsoft@gmail.com">cinexsoft@gmail.com</a>
+            </p>
+        </footer>
     </div>
-    <footer>
-        <p>
-            Send feedback to
-            <a href="mailto:cinexsoft@gmail.com">cinexsoft@gmail.com</a>
-        </p>
-    </footer>
     <script src="/common/scripts/common.js"></script>
 </body>
 </html>
