--- a/development/public/index.html
+++ b/development/public/index.html
@@ -29,6 +29,11 @@
             // box-shadow: 0.5px 0.5px 2px 0px var(--shadow-color);
         }
     </style>
+    <!-- NOTE: placeholder IDs are used to set text to HTML nodes using JS
+         LIST of placeholders
+         1. ph-your-name - Holds name of the user who creates and copies the link
+         2. ph-msg-xxxx - xxxx... represent an ID. Holds the message sent by some other user.
+    -->
 </head>
 <body>
     <div class="vert-layout" id="root" style="
@@ -56,10 +61,10 @@
             <div class="vert-layout" style="
                 justify-content: center;
                 align-items: center; ">
-                <h1 class="noselect" id="h1-your-name" style="
+                <h1 class="noselect" style="
                     margin: 10px;
                     font-size: 2rem;">
-                    Hi Padey! 👋
+                    Hi <font class="placeholder" id="ph-your-name">Sonu</font>! 👋
                 </h1>
                 <p class="noselect" style="
                     margin: 10px;
@@ -92,112 +97,112 @@
                 font-size: 1.5rem; ">
                 Your Messages
             </h2>
-            <p class="message" id="p-msg-0000">
+            <p class="message placeholder" id="ph-msg-0000">
                 Hi!
                 This is another demo message!
                 Hope you are doing well.
             </p>
-            <p class="message" id="p-msg-0000">
+            <p class="message placeholder" id="ph-msg-0000">
                 Hi!
                 This is another demo message!
                 Hope you are doing well.
             </p>
-            <p class="message" id="p-msg-0000">
+            <p class="message placeholder" id="ph-msg-0000">
                 Hi!
                 This is another demo message!
                 Hope you are doing well.
             </p>
-            <p class="message" id="p-msg-0000">
+            <p class="message placeholder" id="ph-msg-0000">
                 Hi!
                 This is another demo message!
                 Hope you are doing well.
             </p>
-            <p class="message" id="p-msg-0000">
+            <p class="message placeholder" id="ph-msg-0000">
                 Hi!
                 This is another demo message!
                 Hope you are doing well.
             </p>
-            <p class="message" id="p-msg-0000">
+            <p class="message placeholder" id="ph-msg-0000">
                 Hi!
                 This is another demo message!
                 Hope you are doing well.
             </p>
-            <p class="message" id="p-msg-0000">
+            <p class="message placeholder" id="ph-msg-0000">
                 Hi!
                 This is another demo message!
                 Hope you are doing well.
             </p>
-            <p class="message" id="p-msg-0000">
+            <p class="message placeholder" id="ph-msg-0000">
                 Hi!
                 This is another demo message!
                 Hope you are doing well.
             </p>
-            <p class="message" id="p-msg-0000">
+            <p class="message placeholder" id="ph-msg-0000">
                 Hi!
                 This is another demo message!
                 Hope you are doing well.
             </p>
-            <p class="message" id="p-msg-0000">
+            <p class="message placeholder" id="ph-msg-0000">
                 Hi!
                 This is another demo message!
                 Hope you are doing well.
             </p>
-            <p class="message" id="p-msg-0000">
+            <p class="message placeholder" id="ph-msg-0000">
                 Hi!
                 This is another demo message!
                 Hope you are doing well.
             </p>
-            <p class="message" id="p-msg-0000">
+            <p class="message placeholder" id="ph-msg-0000">
                 Hi!
                 This is another demo message!
                 Hope you are doing well.
             </p>
-            <p class="message" id="p-msg-0000">
+            <p class="message placeholder" id="ph-msg-0000">
                 Hi!
                 This is another demo message!
                 Hope you are doing well.
             </p>
-            <p class="message" id="p-msg-0000">
+            <p class="message placeholder" id="ph-msg-0000">
                 Hi!
                 This is another demo message!
                 Hope you are doing well.
             </p>
-            <p class="message" id="p-msg-0000">
+            <p class="message placeholder" id="ph-msg-0000">
                 Hi!
                 This is another demo message!
                 Hope you are doing well.
             </p>
-            <p class="message" id="p-msg-0000">
+            <p class="message placeholder" id="ph-msg-0000">
                 Hi!
                 This is another demo message!
                 Hope you are doing well.
             </p>
-            <p class="message" id="p-msg-0000">
+            <p class="message placeholder" id="ph-msg-0000">
                 Hi!
                 This is another demo message!
                 Hope you are doing well.
             </p>
-            <p class="message" id="p-msg-0000">
+            <p class="message placeholder" id="ph-msg-0000">
                 Hi!
                 This is another demo message!
                 Hope you are doing well.
             </p>
-            <p class="message" id="p-msg-0000">
+            <p class="message placeholder" id="ph-msg-0000">
                 Hi!
                 This is another demo message!
                 Hope you are doing well.
             </p>
-            <p class="message" id="p-msg-0000">
+            <p class="message placeholder" id="ph-msg-0000">
                 Hi!
                 This is another demo message!
                 Hope you are doing well.
             </p>
-            <p class="message" id="p-msg-0000">
+            <p class="message placeholder" id="ph-msg-0000">
                 Hi!
                 This is another demo message!
                 Hope you are doing well.
             </p>
-            <p class="message" id="p-msg-0000">
+            <p class="message placeholder" id="ph-msg-0000">
                 Hi!
                 This is another demo message!
                 Hope you are doing well.
