updated font-sizes and div paddings

--- a/development/public/home/index.html
+++ b/development/public/home/index.html
@@ -42,7 +42,6 @@
             border-radius: 0;
             color: var(--tert-fgcolor);
             background-color: var(--tert-bgcolor);
-            box-shadow: 0.5px 0.5px 2px 0px var(--shadow-color);
         }
         div.root div.profile div {
             max-width: 400px;
@@ -67,19 +66,19 @@
             overflow-x: hidden;
         }
         div.root div.messages-root {
-            padding: 20px;
-            width: calc(100% - 40px);
+            padding: 10px;
+            width: calc(100% - 20px);
             align-items: center;
             border-radius: 0;
             color: var(--light-fgcolor);
             background-color: var(--light-bgcolor);
         }
         div.root div.messages-root h2 {
-            margin-bottom: 10px;
+            margin: 10px;
             font-size: 1.5rem;
         }
         div.root div.messages-root div.messages {
-            
+            padding: 0;
         } 
         div.root div.messages-root div.messages p.message {
             margin: 10px auto;
