added scripts files

--- a/development/public/home/index.html
+++ b/development/public/home/index.html
@@ -257,6 +257,6 @@
             </p>
         </footer>
     </div>
-    <script src="/home/script.js"></script>
+    <script type="module" src="/home/script.js"></script>
 </body>
 </html>
