--- a/development/public/msg/index.html
+++ b/development/public/msg/index.html
@@ -19,6 +19,6 @@
     <link rel="stylesheet" href="/common/srules/common.css"/>
 </head>
 <body>
-    <script src="/common/scripts/common.js"></script>
+    <script type="module" src="/msg/script.js"></script>
 </body>
 </html>
