--- a/development/public/register/index.html
+++ b/development/public/register/index.html
@@ -16,7 +16,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
     <link rel="icon" type="image/x-icon" href="/favicon.ico"/>
     <title>Register</title>
-    <link rel="stylesheet" href="/common/srules/common.css"/>
+    <link rel="stylesheet" href="/common/styles/common.css"/>
 </head>
 <body>
     <script type="module" src="/register/script.js"></script>
