--- a/development/public/home/index.html
+++ b/development/public/home/index.html
@@ -120,7 +120,7 @@
             }
         }
         div.SplashScreen {
-            visibility: hidden;
+            visibility: visible;
         }
     </style>
     <!-- NOTE: placeholder IDs are used to set text to HTML nodes using JS
