--- a/development/public/home/index.html
+++ b/development/public/home/index.html
@@ -87,6 +87,12 @@
             border-radius: 10px;
             box-shadow: 0px 0px 5px 0px var(--light-shadow-color);
         }
+        div.root div.messages-root div.messages div.message font.time {
+            position: relative;
+            bottom: 0;
+            right: 0;
+            color: #666;
+        }
         #ph-div-msg-0000 {
             height: calc(60vh - 1.5rem - 50px);
             justify-content: center;
