--- a/development/public/register/index.html
+++ b/development/public/register/index.html
@@ -44,7 +44,7 @@
             color: var(--prim-fgcolor);
             background-color: var(--prim-bgcolor);
         }
-        div.root div.register div {
+        div.root div.register div.vert-layout {
             max-width: 360px;
             justify-content: center;
             align-items: center;
