edited placeholder values

--- a/development/public/register/index.html
+++ b/development/public/register/index.html
@@ -80,8 +80,8 @@
                     Enter your name to generate your link.<br>
                     Your friends can then anonymously message you on this site.
                 </p>
-                <input class="text placeholder" id="ph-input-name" type="text" placeholder="Enter your name">
-                <textarea class="msg placeholder" id="ph-txt-msg" placeholder="Enter a short message for your friends"></textarea>
+                <input class="text placeholder" id="ph-input-name" type="text" placeholder="Your name">
+                <textarea class="msg placeholder" id="ph-txt-msg" placeholder="Your message to your friends (optional)"></textarea>
                 <button class="noselect placeholder" id="btn-submit">Submit</button>
             </div>
         </div>
